project/k8s/broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-service
  template:
    metadata:
      labels:
        app: broker-service
    spec:
      containers:
        - name: broker-service
          image: dmytrothr/broker-service:1.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: broker-service
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
